# SkyEye_cpp_service

./: .gitignore  CMakeLists.txt  CMakePresets.json
client/: index.html
config/: pilot_deploy.linux.properties  pilot_deploy.properties
docs/: linux_deployment.md  windows_deployment.md
feature/: actionformer.cpp  feature.cpp  tridet.cpp
scripts/: package_linux.sh  package_windows.ps1
service/: config.hpp  service.cpp
yolo/: yolo_detector.cpp
